--- a/JZCommon/Editor/JZCommon_Editor.asmdef
+++ b/JZCommon/Editor/JZCommon_Editor.asmdef
@@ -2,7 +2,9 @@
     "name": "JZCommon_Editor",
     "rootNamespace": "JZ.Common.Editor",
     "references": [],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
