Updated package.json to include BT sample

--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
         "path": "Samples~/HSM"
       },
       {
+        "displayName": "Behavior Tree (AI Controller)",
+        "description": "Contains beahvior tree example.",
+        "path": "Samples~/Behavior Tree"
+      },
+      {
         "displayName": "Dialogue Tree",
         "description": "Contains dialogue tree example.",
         "path": "Samples~/Dialogue Tree"
